reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8599ac6b6d6449e72eb76156cbe34de469fcfa1e
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: zh-CN
ms.lasthandoff: 10/07/2020
ms.locfileid: "93199480"
---
# <span data-ttu-id="8c741-103">Microsoft.PowerShell.Utility 模块</span><span class="sxs-lookup"><span data-stu-id="8c741-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="8c741-104">说明</span><span class="sxs-lookup"><span data-stu-id="8c741-104">Description</span></span>

<span data-ttu-id="8c741-105">本部分包含随 Microsoft PowerShell 模块一起安装的 cmdlet 的帮助主题。</span><span class="sxs-lookup"><span data-stu-id="8c741-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="8c741-106">此模块包含管理 PowerShell 的基本功能的 cmdlet。</span><span class="sxs-lookup"><span data-stu-id="8c741-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="8c741-107">Microsoft PowerShell Cmdlet</span><span class="sxs-lookup"><span data-stu-id="8c741-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="8c741-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="8c741-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="8c741-109">将自定义属性和方法添加到 PowerShell 对象的实例。</span><span class="sxs-lookup"><span data-stu-id="8c741-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="8c741-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="8c741-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="8c741-111">将 Microsoft .NET 框架类添加到 PowerShell 会话。</span><span class="sxs-lookup"><span data-stu-id="8c741-111">Adds a Microsoft .NET Framework class to a PowerShell session.</span></span>

### [<span data-ttu-id="8c741-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="8c741-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="8c741-113">删除变量的值。</span><span class="sxs-lookup"><span data-stu-id="8c741-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="8c741-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="8c741-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="8c741-115">将两组对象进行比较。</span><span class="sxs-lookup"><span data-stu-id="8c741-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="8c741-116">Convert-String</span><span class="sxs-lookup"><span data-stu-id="8c741-116">Convert-String</span></span>](Convert-String.md)
<span data-ttu-id="8c741-117">格式化字符串以匹配示例。</span><span class="sxs-lookup"><span data-stu-id="8c741-117">Formats a string to match examples.</span></span>

### [<span data-ttu-id="8c741-118">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="8c741-118">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="8c741-119">将采用逗号分隔值 (CSV) 格式的对象属性转换为原始对象的 CSV 版本。</span><span class="sxs-lookup"><span data-stu-id="8c741-119">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="8c741-120">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="8c741-120">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="8c741-121">将 JSON 格式的字符串转换为自定义对象。</span><span class="sxs-lookup"><span data-stu-id="8c741-121">Converts a JSON-formatted string to a custom object.</span></span>

### [<span data-ttu-id="8c741-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="8c741-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="8c741-123">将 SDDL 字符串转换为自定义对象。</span><span class="sxs-lookup"><span data-stu-id="8c741-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="8c741-124">ConvertFrom-String</span><span class="sxs-lookup"><span data-stu-id="8c741-124">ConvertFrom-String</span></span>](ConvertFrom-String.md)
<span data-ttu-id="8c741-125">从字符串内容中提取并分析结构化对象。</span><span class="sxs-lookup"><span data-stu-id="8c741-125">Extracts and parses structured properties from string content.</span></span>

### [<span data-ttu-id="8c741-126">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="8c741-126">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="8c741-127">将包含一个或多个键-值对的字符串转换为哈希表。</span><span class="sxs-lookup"><span data-stu-id="8c741-127">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="8c741-128">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="8c741-128">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="8c741-129">将 .NET 对象转换为一系列逗号分隔值 (CSV) 字符串。</span><span class="sxs-lookup"><span data-stu-id="8c741-129">Converts .NET objects into a series of comma-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="8c741-130">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="8c741-130">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="8c741-131">将.NET 对象转换为可以在 Web 浏览器中显示的 HTML。</span><span class="sxs-lookup"><span data-stu-id="8c741-131">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="8c741-132">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="8c741-132">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="8c741-133">将对象转换为 JSON 格式的字符串。</span><span class="sxs-lookup"><span data-stu-id="8c741-133">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="8c741-134">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="8c741-134">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="8c741-135">创建对象的基于 XML 的表示形式。</span><span class="sxs-lookup"><span data-stu-id="8c741-135">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="8c741-136">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="8c741-136">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="8c741-137">启动与运行空间的交互式调试会话。</span><span class="sxs-lookup"><span data-stu-id="8c741-137">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="8c741-138">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="8c741-138">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="8c741-139">禁用当前控制台中的断点。</span><span class="sxs-lookup"><span data-stu-id="8c741-139">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="8c741-140">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="8c741-140">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="8c741-141">禁用一个或多个运行空间调试，并释放任何挂起的调试器停止。</span><span class="sxs-lookup"><span data-stu-id="8c741-141">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="8c741-142">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="8c741-142">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="8c741-143">启用当前控制台中的断点。</span><span class="sxs-lookup"><span data-stu-id="8c741-143">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="8c741-144">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="8c741-144">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="8c741-145">启用对运行空间的调试，其中任何断点都将保留，直到附加调试器。</span><span class="sxs-lookup"><span data-stu-id="8c741-145">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="8c741-146">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="8c741-146">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="8c741-147">将有关当前定义的别名的信息导出到文件中。</span><span class="sxs-lookup"><span data-stu-id="8c741-147">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="8c741-148">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="8c741-148">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="8c741-149">创建一个或多个对象的基于 XML 的表示形式，并将其存储在文件中。</span><span class="sxs-lookup"><span data-stu-id="8c741-149">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="8c741-150">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="8c741-150">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="8c741-151">将对象转换为一系列逗号分隔值 (CSV) 字符串，并将字符串保存到文件。</span><span class="sxs-lookup"><span data-stu-id="8c741-151">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="8c741-152">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="8c741-152">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="8c741-153">将当前会话中的格式设置数据保存在格式设置文件中。</span><span class="sxs-lookup"><span data-stu-id="8c741-153">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="8c741-154">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="8c741-154">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="8c741-155">导出另一个会话中的命令，并将其保存在 PowerShell 模块中。</span><span class="sxs-lookup"><span data-stu-id="8c741-155">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="8c741-156">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="8c741-156">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="8c741-157">使用自定义的视图来设置输出格式。</span><span class="sxs-lookup"><span data-stu-id="8c741-157">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="8c741-158">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="8c741-158">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="8c741-159">将文件或其他输入显示为十六进制。</span><span class="sxs-lookup"><span data-stu-id="8c741-159">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="8c741-160">Format-List</span><span class="sxs-lookup"><span data-stu-id="8c741-160">Format-List</span></span>](Format-List.md)
<span data-ttu-id="8c741-161">将输出的格式设置为属性列表，其中每个属性都显示在一个新行上。</span><span class="sxs-lookup"><span data-stu-id="8c741-161">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="8c741-162">Format-Table</span><span class="sxs-lookup"><span data-stu-id="8c741-162">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="8c741-163">将输出的格式设置为一个表。</span><span class="sxs-lookup"><span data-stu-id="8c741-163">Formats the output as a table.</span></span>

### [<span data-ttu-id="8c741-164">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="8c741-164">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="8c741-165">将对象格式设置为宽表，此表仅显示每个对象的一个属性。</span><span class="sxs-lookup"><span data-stu-id="8c741-165">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="8c741-166">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="8c741-166">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="8c741-167">获取当前会话的别名。</span><span class="sxs-lookup"><span data-stu-id="8c741-167">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="8c741-168">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="8c741-168">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="8c741-169">获取操作系统中设置的当前区域性。</span><span class="sxs-lookup"><span data-stu-id="8c741-169">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="8c741-170">Get-Date</span><span class="sxs-lookup"><span data-stu-id="8c741-170">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="8c741-171">获取当前日期和时间。</span><span class="sxs-lookup"><span data-stu-id="8c741-171">Gets the current date and time.</span></span>

### [<span data-ttu-id="8c741-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="8c741-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="8c741-173">获取事件队列中的事件。</span><span class="sxs-lookup"><span data-stu-id="8c741-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="8c741-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="8c741-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="8c741-175">获取当前会话中的事件订阅服务器。</span><span class="sxs-lookup"><span data-stu-id="8c741-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="8c741-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="8c741-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="8c741-177">通过使用指定的哈希算法，计算文件的哈希值。</span><span class="sxs-lookup"><span data-stu-id="8c741-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="8c741-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="8c741-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="8c741-179">获取当前会话中的格式设置数据。</span><span class="sxs-lookup"><span data-stu-id="8c741-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="8c741-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="8c741-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="8c741-181">获取表示当前主机程序的对象。</span><span class="sxs-lookup"><span data-stu-id="8c741-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="8c741-182">Get-Member</span><span class="sxs-lookup"><span data-stu-id="8c741-182">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="8c741-183">获取对象的属性和方法。</span><span class="sxs-lookup"><span data-stu-id="8c741-183">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="8c741-184">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="8c741-184">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="8c741-185">获取在当前会话中设置的断点。</span><span class="sxs-lookup"><span data-stu-id="8c741-185">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="8c741-186">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="8c741-186">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="8c741-187">显示当前的调用堆栈。</span><span class="sxs-lookup"><span data-stu-id="8c741-187">Displays the current call stack.</span></span>

### [<span data-ttu-id="8c741-188">Get-Random</span><span class="sxs-lookup"><span data-stu-id="8c741-188">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="8c741-189">获取一个随机数，或从集合中随机选择对象。</span><span class="sxs-lookup"><span data-stu-id="8c741-189">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="8c741-190">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="8c741-190">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="8c741-191">获取 PowerShell 主机进程内的活动运行空间。</span><span class="sxs-lookup"><span data-stu-id="8c741-191">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="8c741-192">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="8c741-192">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="8c741-193">显示运行空间调试选项。</span><span class="sxs-lookup"><span data-stu-id="8c741-193">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="8c741-194">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="8c741-194">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="8c741-195">获取用于跟踪的 PowerShell 组件。</span><span class="sxs-lookup"><span data-stu-id="8c741-195">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="8c741-196">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="8c741-196">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="8c741-197">获取当前会话中的扩展类型数据。</span><span class="sxs-lookup"><span data-stu-id="8c741-197">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="8c741-198">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="8c741-198">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="8c741-199">获取操作系统中的当前 UI 区域性设置。</span><span class="sxs-lookup"><span data-stu-id="8c741-199">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="8c741-200">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="8c741-200">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="8c741-201">从排序列表中返回唯一项。</span><span class="sxs-lookup"><span data-stu-id="8c741-201">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="8c741-202">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="8c741-202">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="8c741-203">获取当前控制台中的变量。</span><span class="sxs-lookup"><span data-stu-id="8c741-203">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="8c741-204">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="8c741-204">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="8c741-205">获取已批准的 PowerShell 谓词。</span><span class="sxs-lookup"><span data-stu-id="8c741-205">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="8c741-206">Group-Object</span><span class="sxs-lookup"><span data-stu-id="8c741-206">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="8c741-207">包含相同指定属性的值的组对象。</span><span class="sxs-lookup"><span data-stu-id="8c741-207">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="8c741-208">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="8c741-208">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="8c741-209">从文件导入别名列表。</span><span class="sxs-lookup"><span data-stu-id="8c741-209">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="8c741-210">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="8c741-210">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="8c741-211">导入 EXPORT-CLIXML 文件并在 PowerShell 中创建相应的对象。</span><span class="sxs-lookup"><span data-stu-id="8c741-211">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="8c741-212">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="8c741-212">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="8c741-213">使用逗号分隔值 (CSV) 文件中的项创建类似表的自定义对象。</span><span class="sxs-lookup"><span data-stu-id="8c741-213">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="8c741-214">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="8c741-214">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="8c741-215">基于针对操作系统所选择的 UI 区域性，将特定于语言的数据导入脚本和函数。</span><span class="sxs-lookup"><span data-stu-id="8c741-215">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="8c741-216">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="8c741-216">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="8c741-217">从中导入值。PSD1 文件，不调用其内容</span><span class="sxs-lookup"><span data-stu-id="8c741-217">Imports values from a .PSD1 file without invoking its contents</span></span>

### [<span data-ttu-id="8c741-218">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="8c741-218">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="8c741-219">将另一个会话中的命令导入当前会话中。</span><span class="sxs-lookup"><span data-stu-id="8c741-219">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="8c741-220">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="8c741-220">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="8c741-221">在本地计算机上运行命令或表达式。</span><span class="sxs-lookup"><span data-stu-id="8c741-221">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="8c741-222">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="8c741-222">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="8c741-223">将 HTTP 或 HTTPS 请求发送到 RESTful Web 服务。</span><span class="sxs-lookup"><span data-stu-id="8c741-223">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="8c741-224">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="8c741-224">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="8c741-225">从 Internet 上的网页中获取内容。</span><span class="sxs-lookup"><span data-stu-id="8c741-225">Gets content from a web page on the Internet.</span></span>

### [<span data-ttu-id="8c741-226">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="8c741-226">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="8c741-227">测量运行脚本块和 cmdlet 所需的时间。</span><span class="sxs-lookup"><span data-stu-id="8c741-227">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="8c741-228">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="8c741-228">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="8c741-229">计算对象的数值属性，以及字符串对象（如文本文件）中的字符、单词和行。</span><span class="sxs-lookup"><span data-stu-id="8c741-229">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="8c741-230">New-Alias</span><span class="sxs-lookup"><span data-stu-id="8c741-230">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="8c741-231">创建新别名。</span><span class="sxs-lookup"><span data-stu-id="8c741-231">Creates a new alias.</span></span>

### [<span data-ttu-id="8c741-232">New-Event</span><span class="sxs-lookup"><span data-stu-id="8c741-232">New-Event</span></span>](New-Event.md)
<span data-ttu-id="8c741-233">创建新事件。</span><span class="sxs-lookup"><span data-stu-id="8c741-233">Creates a new event.</span></span>

### [<span data-ttu-id="8c741-234">新 Guid</span><span class="sxs-lookup"><span data-stu-id="8c741-234">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="8c741-235">创建 GUID。</span><span class="sxs-lookup"><span data-stu-id="8c741-235">Creates a GUID.</span></span>

### [<span data-ttu-id="8c741-236">New-Object</span><span class="sxs-lookup"><span data-stu-id="8c741-236">New-Object</span></span>](New-Object.md)
<span data-ttu-id="8c741-237">创建 Microsoft .NET Framework 或 COM 对象的实例。</span><span class="sxs-lookup"><span data-stu-id="8c741-237">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="8c741-238">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="8c741-238">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="8c741-239">创建临时文件。</span><span class="sxs-lookup"><span data-stu-id="8c741-239">Creates a temporary file.</span></span>

### [<span data-ttu-id="8c741-240">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="8c741-240">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="8c741-241">创建 TimeSpan 对象。</span><span class="sxs-lookup"><span data-stu-id="8c741-241">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="8c741-242">New-Variable</span><span class="sxs-lookup"><span data-stu-id="8c741-242">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="8c741-243">创建新变量。</span><span class="sxs-lookup"><span data-stu-id="8c741-243">Creates a new variable.</span></span>

### [<span data-ttu-id="8c741-244">Out-File</span><span class="sxs-lookup"><span data-stu-id="8c741-244">Out-File</span></span>](Out-File.md)
<span data-ttu-id="8c741-245">将输出发送到文件。</span><span class="sxs-lookup"><span data-stu-id="8c741-245">Sends output to a file.</span></span>

### [<span data-ttu-id="8c741-246">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="8c741-246">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="8c741-247">将输出发送到单独窗口中的交互式表中。</span><span class="sxs-lookup"><span data-stu-id="8c741-247">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="8c741-248">Out-printer</span><span class="sxs-lookup"><span data-stu-id="8c741-248">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="8c741-249">将输出发送到打印机。</span><span class="sxs-lookup"><span data-stu-id="8c741-249">Sends output to a printer.</span></span>

### [<span data-ttu-id="8c741-250">Out-String</span><span class="sxs-lookup"><span data-stu-id="8c741-250">Out-String</span></span>](Out-String.md)
<span data-ttu-id="8c741-251">将输入对象输出为字符串。</span><span class="sxs-lookup"><span data-stu-id="8c741-251">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="8c741-252">Read-Host</span><span class="sxs-lookup"><span data-stu-id="8c741-252">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="8c741-253">从控制台读取一行输入。</span><span class="sxs-lookup"><span data-stu-id="8c741-253">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="8c741-254">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="8c741-254">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="8c741-255">订阅由 PowerShell 引擎和 cmdlet 生成的事件 `New-Event` 。</span><span class="sxs-lookup"><span data-stu-id="8c741-255">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="8c741-256">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="8c741-256">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="8c741-257">订阅由 Microsoft .NET Framework 对象生成的事件。</span><span class="sxs-lookup"><span data-stu-id="8c741-257">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="8c741-258">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="8c741-258">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="8c741-259">从事件队列中删除事件。</span><span class="sxs-lookup"><span data-stu-id="8c741-259">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="8c741-260">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="8c741-260">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="8c741-261">从当前控制台中删除断点。</span><span class="sxs-lookup"><span data-stu-id="8c741-261">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="8c741-262">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="8c741-262">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="8c741-263">从当前会话中删除扩展的类型。</span><span class="sxs-lookup"><span data-stu-id="8c741-263">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="8c741-264">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="8c741-264">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="8c741-265">删除变量及其值。</span><span class="sxs-lookup"><span data-stu-id="8c741-265">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="8c741-266">Select-Object</span><span class="sxs-lookup"><span data-stu-id="8c741-266">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="8c741-267">选择对象或对象属性。</span><span class="sxs-lookup"><span data-stu-id="8c741-267">Selects objects or object properties.</span></span>

### [<span data-ttu-id="8c741-268">Select-String</span><span class="sxs-lookup"><span data-stu-id="8c741-268">Select-String</span></span>](Select-String.md)
<span data-ttu-id="8c741-269">在字符串和文件中查找文本。</span><span class="sxs-lookup"><span data-stu-id="8c741-269">Finds text in strings and files.</span></span>

### [<span data-ttu-id="8c741-270">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="8c741-270">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="8c741-271">在 XML 字符串或文档中查找文本。</span><span class="sxs-lookup"><span data-stu-id="8c741-271">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="8c741-272">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="8c741-272">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="8c741-273">发送电子邮件。</span><span class="sxs-lookup"><span data-stu-id="8c741-273">Sends an email message.</span></span>

### [<span data-ttu-id="8c741-274">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="8c741-274">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="8c741-275">在当前 PowerShell 会话中为 cmdlet 或其他命令创建或更改别名。</span><span class="sxs-lookup"><span data-stu-id="8c741-275">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="8c741-276">Set-Date</span><span class="sxs-lookup"><span data-stu-id="8c741-276">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="8c741-277">将计算机上的系统时间更改为你指定的时间。</span><span class="sxs-lookup"><span data-stu-id="8c741-277">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="8c741-278">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="8c741-278">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="8c741-279">在行、命令或变量上设置断点。</span><span class="sxs-lookup"><span data-stu-id="8c741-279">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="8c741-280">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="8c741-280">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="8c741-281">配置、启动和停止 PowerShell 组件的跟踪。</span><span class="sxs-lookup"><span data-stu-id="8c741-281">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="8c741-282">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="8c741-282">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="8c741-283">设置变量的值。</span><span class="sxs-lookup"><span data-stu-id="8c741-283">Sets the value of a variable.</span></span>

### [<span data-ttu-id="8c741-284">Show-Command</span><span class="sxs-lookup"><span data-stu-id="8c741-284">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="8c741-285">在图形窗口中显示 PowerShell 命令信息。</span><span class="sxs-lookup"><span data-stu-id="8c741-285">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="8c741-286">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="8c741-286">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="8c741-287">按照属性值对对象进行排序。</span><span class="sxs-lookup"><span data-stu-id="8c741-287">Sorts objects by property values.</span></span>

### [<span data-ttu-id="8c741-288">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="8c741-288">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="8c741-289">在指定的时间段内将脚本或会话中的活动挂起。</span><span class="sxs-lookup"><span data-stu-id="8c741-289">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="8c741-290">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="8c741-290">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="8c741-291">将命令输出保存在文件或变量中，同时通过管道向下发送。</span><span class="sxs-lookup"><span data-stu-id="8c741-291">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="8c741-292">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="8c741-292">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="8c741-293">配置并启动对指定表达式或命令的跟踪。</span><span class="sxs-lookup"><span data-stu-id="8c741-293">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="8c741-294">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="8c741-294">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="8c741-295">取消阻止已从 Internet 下载的文件。</span><span class="sxs-lookup"><span data-stu-id="8c741-295">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="8c741-296">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="8c741-296">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="8c741-297">取消事件订阅。</span><span class="sxs-lookup"><span data-stu-id="8c741-297">Cancels an event subscription.</span></span>

### [<span data-ttu-id="8c741-298">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="8c741-298">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="8c741-299">更新当前会话中的格式设置数据。</span><span class="sxs-lookup"><span data-stu-id="8c741-299">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="8c741-300">Update-List</span><span class="sxs-lookup"><span data-stu-id="8c741-300">Update-List</span></span>](Update-List.md)
<span data-ttu-id="8c741-301">在包含对象集合的属性值中添加和删除项。</span><span class="sxs-lookup"><span data-stu-id="8c741-301">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="8c741-302">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="8c741-302">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="8c741-303">更新会话中的扩展类型数据。</span><span class="sxs-lookup"><span data-stu-id="8c741-303">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="8c741-304">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="8c741-304">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="8c741-305">在脚本中运行下一个语句之前，停止调试器中的脚本。</span><span class="sxs-lookup"><span data-stu-id="8c741-305">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="8c741-306">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="8c741-306">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="8c741-307">等待，直到在继续运行之前引发特定事件。</span><span class="sxs-lookup"><span data-stu-id="8c741-307">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="8c741-308">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="8c741-308">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="8c741-309">将调试消息写入控制台。</span><span class="sxs-lookup"><span data-stu-id="8c741-309">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="8c741-310">写入错误</span><span class="sxs-lookup"><span data-stu-id="8c741-310">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="8c741-311">将对象写入错误流。</span><span class="sxs-lookup"><span data-stu-id="8c741-311">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="8c741-312">Write-Host</span><span class="sxs-lookup"><span data-stu-id="8c741-312">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="8c741-313">将自定义的输出写入主机。</span><span class="sxs-lookup"><span data-stu-id="8c741-313">Writes customized output to a host.</span></span>

### [<span data-ttu-id="8c741-314">Write-Information</span><span class="sxs-lookup"><span data-stu-id="8c741-314">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="8c741-315">指定 PowerShell 如何处理命令的信息流数据。</span><span class="sxs-lookup"><span data-stu-id="8c741-315">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="8c741-316">Write-Output</span><span class="sxs-lookup"><span data-stu-id="8c741-316">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="8c741-317">将指定的对象发送到管道中的下一个命令。</span><span class="sxs-lookup"><span data-stu-id="8c741-317">Sends the specified objects to the next command in the pipeline.</span></span>

### [<span data-ttu-id="8c741-318">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="8c741-318">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="8c741-319">在 PowerShell 命令窗口中显示一个进度栏。</span><span class="sxs-lookup"><span data-stu-id="8c741-319">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="8c741-320">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="8c741-320">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="8c741-321">将文本写入详细消息流。</span><span class="sxs-lookup"><span data-stu-id="8c741-321">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="8c741-322">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="8c741-322">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="8c741-323">写入一条警告消息。</span><span class="sxs-lookup"><span data-stu-id="8c741-323">Writes a warning message.</span></span>
